# aws-gcp-azure

./: .env.example  .gitignore  AGENTS.md  README.md  WORK.md  pyproject.toml
docs/: FREE-TIER.md
function/: app.py  aws_handler.py  function_app.py  gcp_main.py  requirements-aws.txt  requirements-gcp.txt  requirements.txt  response.py
function/adapters/: aws.py  azure.py  gcp.py
function/azure/: requirements.txt
function/events/: partition.py  schema.py  store.py
functions/aws/: handler.py
functions/azure/: function_app.py  host.json
functions/gcp/: main.py  requirements.txt
infra/aws/python/: adapter.py  blob.py  main.py  query.py
infra/aws/terraform/: main.tf  outputs.tf  variables.tf
infra/az/python/: adapter.py  blob.py  function_app.py  query.py
infra/az/terraform/: main.tf  variables.tf
infra/gcp/python/: adapter.py  blob.py  main.py  query.py  requirements.txt  storage.py
infra/gcp/terraform/: main.tf  variables.tf
scripts/: apply.sh  deploy-gcp.sh  destroy.sh  discover-env.sh  load-env.sh  wire-peers.sh
src/: app.py  events.py  http_util.py  models.py  peers.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/azure/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/gcp/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/aws/: main.tf  variables.tf
tests/: test_blob.py  test_core.py  test_events.py
(+6 files in other folders)
