[project]
name = "aws-gcp-azure"
version = "0.1.0"
description = "Multi-cloud minimal serverless LAMBDA (health, webhooks, peer sync)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
managed = true
